# FrettysEssentia

./: CMakeLists.txt  Dockerfile  Dockerrun.aws.json  README.md
.github/workflows/: c_build.yml
src/: CMakeLists.txt  audioanalytics.cpp  audioanalytics.h  audiostreamer.cpp  audiostreamer.h  chordstreamer.cpp  chordstreamer.h  main.cpp  server.cpp
